[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/MODES___.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/PlayerHUD.gd" type="Script" id=2]
[ext_resource path="res://scenes/Radar.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[node name="HUD" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthLabel" type="Label" parent="CanvasLayer"]
margin_left = 24.0
margin_top = 536.0
margin_right = 132.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 1 )
text = "Health: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldsLabel" type="Label" parent="CanvasLayer"]
margin_left = 24.0
margin_top = 512.0
margin_right = 144.0
margin_bottom = 532.0
custom_fonts/font = SubResource( 2 )
text = "Shields: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
margin_left = 24.0
margin_top = 632.0
margin_right = 120.0
margin_bottom = 652.0
custom_fonts/font = SubResource( 3 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThrustLabel" type="Label" parent="CanvasLayer"]
margin_left = 24.0
margin_top = 656.0
margin_right = 132.0
margin_bottom = 676.0
custom_fonts/font = SubResource( 4 )
text = "Thrust: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RockLabel" type="Label" parent="CanvasLayer"]
margin_left = 24.0
margin_top = 608.0
margin_right = 120.0
margin_bottom = 628.0
custom_fonts/font = SubResource( 5 )
text = "Rocks: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlienLabel" type="Label" parent="CanvasLayer"]
margin_left = 24.0
margin_top = 582.0
margin_right = 132.0
margin_bottom = 602.0
custom_fonts/font = SubResource( 6 )
text = "Aliens: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Radar" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = 512.0
margin_top = 560.0
margin_right = 768.0
margin_bottom = 752.0

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 640, 380 )
current = true
